# SysCol

./: .eslintrc.js  .eslintrc.json  .prettierrc.js  .prettierrc.json  README.md  forge.config.js  forge.config.ts  jest.config.json  package-lock.json  package.json  vite.config.ts  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
src/: CancelableResult.ts  Events.js  Events.ts  IpcEvents.ts  SysColApi.ts  TestScriptBuilder.ts  TestScriptBuilderImpl.ts  createWindow.js  createWindow.ts  index.css  index.html  index.js  index.ts  main.ts  menu.ts  preload.js  preload.ts  renderer.ts  scripts.js  scripts.ts  settings.js  settings.ts  tauri.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  serial_port_plugin.rs  serial_port_plugin_commands.rs  serial_port_plugin_error.rs  serial_port_plugin_state.rs
src/__tests__/: parseInterval.test.ts
src/environment/: Environment.ts  SerialPort.ts  TextFileReader.ts  TextFileWriter.ts  WriteStream.ts
src/protocols/: SysColCommandProtocol.ts
src/script/: Command.ts  CommandProtocol.ts  CommandResponse.ts  EchoSerialPortMock.js  EchoSerialPortMock.ts  LogFile.ts  LogOutputType.ts  MacroArguments.ts  SerialPortOpenOptions.ts  TestScript.js  TestScript.ts  TestScriptBuilder.ts  TestScriptCounters.ts  TestScriptError.ts  TestScriptEvents.ts  TestScriptFactory.ts  TestScriptImpl.ts  TestScriptInterruptController.ts  TestScriptInterruptControllerImpl.ts  getTestOutcome.ts  getTestResult.ts  openSerialPort.js  openSerialPort.ts  parseCommand.js  parseCommandResponse.ts  parseResponse.js  sleep.js  (+4 more)
(+67 files in other folders)
